force-app/main/default/objects/Advisor__c/fields/Response_rate_since_2007__c.field-meta.xml
<CustomField>
    <fullName>Response_rate_since_2007__c</fullName>
    <description>The fraction of assessments requested since 7/1/2007 that have been received</description>
    <formula>IF(Num_assessments_req_d_since_2007__c = 0, null,
 Num_assessments_rec_d_since_2007__c / Num_assessments_req_d_since_2007__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The fraction of assessments requested since 7/1/2007 that have been received</inlineHelpText>
    <label>Response rate since 2007</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>