force-app/main/default/objects/Advisor__c/fields/ResponseRate__c.field-meta.xml
<CustomField>
    <fullName>ResponseRate__c</fullName>
    <description>The fraction of assessments requested that have been received</description>
    <formula>Num_assessments_received__c /  Num_assessments_requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The fraction of assessments requested that have been received</inlineHelpText>
    <label>ResponseRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>