force-app/main/default/objects/Advisor__c/fields/Role_Strengthening_Movements__c.field-meta.xml
<CustomField>
    <fullName>Role_Strengthening_Movements__c</fullName>
    <description>Advisor role in strengthening women&apos;s rights movements and corresponding geographic locations</description>
    <inlineHelpText>Advisor role in strengthening women&apos;s rights movements and corresponding geographic locations</inlineHelpText>
    <label>Role Strengthening Movements</label>
    <type>TextArea</type>
</CustomField>