force-app/main/default/objects/Advisor__c/fields/SavedSetNames__c.field-meta.xml
<CustomField>
    <fullName>SavedSetNames__c</fullName>
    <description>Temporary field for retrieving saved sets</description>
    <inlineHelpText>Temporary field for retrieving saved sets</inlineHelpText>
    <label>SavedSetNames</label>
    <type>TextArea</type>
</CustomField>