force-app/main/default/objects/Advisor__c/fields/Social_Movement_Participation__c.field-meta.xml
<CustomField>
    <fullName>Social_Movement_Participation__c</fullName>
    <description>Social movement participation identified by advisor</description>
    <inlineHelpText>Social movement participation identified by advisor</inlineHelpText>
    <label>Social Movement Participation</label>
    <type>TextArea</type>
</CustomField>