force-app/main/default/objects/Advisor__c/fields/SRHR__c.field-meta.xml
<CustomField>
    <fullName>SRHR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advisor expertise aligned with GFW thematic priority of SRHR (self-selected)</description>
    <inlineHelpText>Advisor expertise aligned with GFW thematic priority of SRHR (self-selected)</inlineHelpText>
    <label>SRHR</label>
    <type>Checkbox</type>
</CustomField>