force-app/main/default/objects/Advisor__c/fields/Sub_issue_geo_AMT__c.field-meta.xml
<CustomField>
    <fullName>Sub_issue_geo_AMT__c</fullName>
    <description>Advisor expertise in sub-issues and geographic locations aligned with advocacy, media and technology</description>
    <inlineHelpText>Advisor expertise in sub-issues and geographic locations aligned with advocacy, media and technology</inlineHelpText>
    <label>Sub-issue &amp; geo: AMT</label>
    <type>TextArea</type>
</CustomField>