force-app/main/default/objects/Advisor__c/fields/Sub_issue_geo_EE__c.field-meta.xml
<CustomField>
    <fullName>Sub_issue_geo_EE__c</fullName>
    <description>Advisor expertise in sub-issues and geographic locations aligned with economic empowerment</description>
    <inlineHelpText>Advisor expertise in sub-issues and geographic locations aligned with economic empowerment</inlineHelpText>
    <label>Sub-issue &amp; geo: EE</label>
    <type>TextArea</type>
</CustomField>