force-app/main/default/objects/Advisor__c/fields/Sub_issue_geo_FV__c.field-meta.xml
<CustomField>
    <fullName>Sub_issue_geo_FV__c</fullName>
    <description>Advisor expertise in sub-issues and geographic locations aligned with freedom from violence</description>
    <inlineHelpText>Advisor expertise in sub-issues and geographic locations aligned with freedom from violence</inlineHelpText>
    <label>Sub-issue &amp; geo: FV</label>
    <type>TextArea</type>
</CustomField>