force-app/main/default/objects/Advisor__c/fields/Sub_issue_geo_PE__c.field-meta.xml
<CustomField>
    <fullName>Sub_issue_geo_PE__c</fullName>
    <description>Advisor expertise in sub-issues and geographic locations aligned with political and civic empowerment</description>
    <inlineHelpText>Advisor expertise in sub-issues and geographic locations aligned with political and civic empowerment</inlineHelpText>
    <label>Sub-issue &amp; geo: PE</label>
    <type>TextArea</type>
</CustomField>