force-app/main/default/objects/Advisor__c/fields/Sub_issue_geo_SRHR__c.field-meta.xml
<CustomField>
    <fullName>Sub_issue_geo_SRHR__c</fullName>
    <description>Advisor expertise in sub-issues and geographic locations aligned with SRHR</description>
    <inlineHelpText>Advisor expertise in sub-issues and geographic locations aligned with SRHR</inlineHelpText>
    <label>Sub-issue &amp; geo: SRHR</label>
    <type>TextArea</type>
</CustomField>