force-app/main/default/objects/Advisor__c/fields/Sub_issue_geo_WF__c.field-meta.xml
<CustomField>
    <fullName>Sub_issue_geo_WF__c</fullName>
    <description>Advisor expertise in sub-issues and geographic locations aligned with women&apos;s funds</description>
    <inlineHelpText>Advisor expertise in sub-issues and geographic locations aligned with women&apos;s funds</inlineHelpText>
    <label>Sub-issue &amp; geo: WF</label>
    <type>TextArea</type>
</CustomField>