force-app/main/default/objects/Advisor__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of advisor (including official, informal, reference)</description>
    <inlineHelpText>Type of advisor (including official, informal, reference)</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Official</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>