force-app/main/default/objects/Advisor__c/fields/WF__c.field-meta.xml
<CustomField>
    <fullName>WF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advisor expertise aligned with GFW thematic priority of women&apos;s funds (self-selected)</description>
    <inlineHelpText>Advisor expertise aligned with GFW thematic priority of women&apos;s funds (self-selected)</inlineHelpText>
    <label>WF</label>
    <type>Checkbox</type>
</CustomField>