force-app/main/default/objects/Advisor__c/validationRules/AdvisorNameChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>AdvisorNameChanged</fullName>
    <active>false</active>
    <description>To change advisor name, please change the name in the linked Contact record - from there the change will cascade back to the advisor and its linked account.</description>
    <errorConditionFormula>/* Note that only offline advisors are checked. */
AND(
 ISCHANGED(Name),
 NOT(ISBLANK(Contact__c)),
 /* Name &lt;&gt; Contact__r.Name, */
 Contact__r.RecordType.Name = &quot;Contact GM Advisor&quot;,
 Community_contact__c = null
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>To change advisor name, please change the name in the linked Contact record - from there the change will cascade back to the advisor and its linked account.</errorMessage>
</ValidationRule>