force-app/main/default/objects/Advisor__c/validationRules/Global_or_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_or_Program</fullName>
    <active>false</active>
    <description>Must have value for Program unless Global is selected.</description>
    <errorConditionFormula>OR(
     AND (ISBLANK( Program__c ),  Global__c == FALSE),
     AND (NOT(ISBLANK( Program__c )),  Global__c == TRUE)
)</errorConditionFormula>
    <errorMessage>Must have value for Program unless Global is selected.</errorMessage>
</ValidationRule>