force-app/main/default/objects/Advisor__c/validationRules/LinkedAccountContactClash.validationRule-meta.xml
<ValidationRule>
    <fullName>LinkedAccountContactClash</fullName>
    <active>true</active>
    <description>This advisor links to a contact record, so its parent account must be the same as the advisor&apos;s linked account.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Contact__c )),
 Contact__r.AccountId &lt;&gt; Account__c
)</errorConditionFormula>
    <errorMessage>This advisor links to a contact record, so its parent account must be the same as the advisor&apos;s linked account.</errorMessage>
</ValidationRule>