force-app/main/default/objects/Advisor__c/validationRules/OrgAffiliationRecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>OrgAffiliationRecordType</fullName>
    <active>true</active>
    <description>The record type of an advisor&apos;s org affiliation may not be &quot;Household GM Advisor&quot;.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK( GM_org_affiliation__c )),
 GM_org_affiliation__r.RecordType.Name = &quot;Household GM Advisor&quot;
)</errorConditionFormula>
    <errorDisplayField>GM_org_affiliation__c</errorDisplayField>
    <errorMessage>The record type of an advisor&apos;s org affiliation may not be &quot;Household GM Advisor&quot;.</errorMessage>
</ValidationRule>