force-app/main/default/objects/Advisor__c/listViews/Duplicates_for_cleanup.listView-meta.xml
<ListView>
    <fullName>Duplicates_for_cleanup</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>SavedSetNames__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SavedSetNames__c</field>
        <operation>contains</operation>
        <value>Duplicate</value>
    </filters>
    <label>Duplicates - for cleanup</label>
</ListView>